city_weather_data/logs/dag_id=weather_dag_parallel/run_id=manual__2024-05-22T13:36:17.571657+00:00/task_id=group_a.task_create_table_1/attempt=1.log
[2024-05-22T13:36:36.716+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-05-22T13:36:36.807+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather_dag_parallel.group_a.task_create_table_1 manual__2024-05-22T13:36:17.571657+00:00 [queued]>
[2024-05-22T13:36:36.829+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather_dag_parallel.group_a.task_create_table_1 manual__2024-05-22T13:36:17.571657+00:00 [queued]>
[2024-05-22T13:36:36.830+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 3
[2024-05-22T13:36:36.910+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): group_a.task_create_table_1> on 2024-05-22 13:36:17.571657+00:00
[2024-05-22T13:36:36.922+0000] {standard_task_runner.py:63} INFO - Started process 36613 to run task
[2024-05-22T13:36:36.928+0000] {standard_task_runner.py:90} INFO - Running: ['airflow', 'tasks', 'run', 'weather_dag_parallel', 'group_a.task_create_table_1', 'manual__2024-05-22T13:36:17.571657+00:00', '--job-id', '56', '--raw', '--subdir', 'DAGS_FOLDER/weatherapi_dag.py', '--cfg-path', '/tmp/tmpavnxrm_x']
[2024-05-22T13:36:36.955+0000] {standard_task_runner.py:91} INFO - Job 56: Subtask group_a.task_create_table_1
[2024-05-22T13:36:37.488+0000] {task_command.py:426} INFO - Running <TaskInstance: weather_dag_parallel.group_a.task_create_table_1 manual__2024-05-22T13:36:17.571657+00:00 [running]> on host ubuntu2204
[2024-05-22T13:36:37.996+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_EMAIL='test@gmail.com' AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='weather_dag_parallel' AIRFLOW_CTX_TASK_ID='group_a.task_create_table_1' AIRFLOW_CTX_EXECUTION_DATE='2024-05-22T13:36:17.571657+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-05-22T13:36:17.571657+00:00'
[2024-05-22T13:36:37.997+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-05-22T13:36:38.136+0000] {sql.py:276} INFO - Executing: 
                CREATE TABLE IF NOT EXISTS city_look_up (
                    city text NOT NULL,
                    state text NOT NULL,
                    census_2020 numeric NOT NULL,
                    land_Area_sq_mile_2020 numeric NUT NULL
                );
            
[2024-05-22T13:36:38.149+0000] {base.py:84} INFO - Using connection ID '***_conn' for task execution.
[2024-05-22T13:36:38.570+0000] {base.py:84} INFO - Using connection ID '***_conn' for task execution.
[2024-05-22T13:36:39.261+0000] {sql.py:486} INFO - Running statement: 
                CREATE TABLE IF NOT EXISTS city_look_up (
                    city text NOT NULL,
                    state text NOT NULL,
                    census_2020 numeric NOT NULL,
                    land_Area_sq_mile_2020 numeric NUT NULL
                );
            , parameters: None
[2024-05-22T13:36:39.353+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-05-22T13:36:39.356+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/denys/airflow_venv/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/denys/airflow_venv/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/denys/airflow_venv/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/denys/airflow_venv/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/denys/airflow_venv/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 434, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/denys/airflow_venv/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 491, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "NUT"
LINE 6:                     land_Area_sq_mile_2020 numeric NUT NULL
                                                           ^

[2024-05-22T13:36:39.377+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=weather_dag_parallel, task_id=group_a.task_create_table_1, run_id=manual__2024-05-22T13:36:17.571657+00:00, execution_date=20240522T133617, start_date=20240522T133636, end_date=20240522T133639
[2024-05-22T13:36:39.468+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 56 for task group_a.task_create_table_1 (syntax error at or near "NUT"
LINE 6:                     land_Area_sq_mile_2020 numeric NUT NULL
                                                           ^
; 36613)
[2024-05-22T13:36:39.533+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-05-22T13:36:39.571+0000] {logging_mixin.py:188} WARNING - /home/denys/airflow_venv/lib/python3.12/site-packages/airflow/models/baseoperator.py:1296 AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `airflow.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
[2024-05-22T13:36:39.598+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-05-22T13:36:39.600+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
